--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-firebase-hooks": "^5.0.3",
     "react-google-button": "^0.7.2",
     "react-scripts": "5.0.1",
+    "react-scroll-to-bottom": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -43,6 +44,7 @@
   "devDependencies": {
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
+    "postcss-cli": "^10.0.0",
     "tailwindcss": "^3.1.8"
   }
 }
